bring source current